--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -22,3 +22,6 @@ jobs:
 
       - name: Build with Maven
         run: mvn clean install
+
+      - name: Publish to GitHub Packages
+        run: mvn deploy --settings ${{ github.workspace }}/settings.xml
